# case_ml_engineer_pleno

parte_1/: Dockerfile  compose.yml  database.db  pyproject.toml
parte_1/.github/workflows/: python_poetry_dev.yml
parte_1/data/: pokeapi_analysis.ipynb  pokemons_raw.jsonl
parte_1/data/SOT/pokemon/2026/03/09/: pokemon.parquet
parte_1/data/SOT/pokemon_ability/2026/03/09/: pokemon_ability.parquet
parte_1/data/SOT/pokemon_stats/2026/03/09/: pokemon_stats.parquet
parte_1/data/SOT/pokemon_stats/2026/03/10/: pokemon_stats.parquet
parte_1/data/SOT/pokemon_type/2026/03/09/: pokemon_type.parquet
parte_1/data/poke_ETL/: README.md  databricks.yml  pyproject.toml
parte_1/data/poke_ETL/resources/: sample_job.job.yml
parte_1/data/poke_ETL/src/: sample_notebook.ipynb
parte_1/data/poke_ETL/src/poke_ETL/: main.py
parte_1/data/poke_ETL/tests/: sample_taxis_test.py
parte_1/migrations/: env.py
parte_1/migrations/versions/: 38e1eb4dfa35_create_pokemon_tables.py  fcff0e33e0da_create_pokemon_tables.py
parte_1/pokeapi_etl/: main.py
parte_1/pokeapi_etl/api/: api_handler.py  client.py
parte_1/pokeapi_etl/database/: database.py  models.py  schemas.py
parte_1/pokeapi_etl/storage/: storage.py
parte_1/pokeapi_etl/utils/: logger.py  settings.py
parte_1/tests/: conftest.py  factories.py  test_api_handler.py  test_client.py  test_hello_word.py  test_schemas.py  test_storage.py
